# Algorithm-deployment-template-of-each-platform

./: README.md
Bitmain/BM1684X/: README.md
Bitmain/BM1684X/model_infer/template/: CMakeLists.txt  main.cpp
Bitmain/BM1684X/model_transform/export_template/scripts/: gen_fp16bmodel_mlir.sh  gen_fp32bmodel_mlir.sh  gen_int8bmodel_mlir.sh
Hisi/Hi3519_DV500/: README.md
Hisi/Hi3519_DV500/model_infer/: CMakeLists.txt
Hisi/Hi3519_DV500/model_infer/inc/: main.h
Hisi/Hi3519_DV500/model_infer/src/: main.cpp
Hisi/Hi3519_DV500/model_transform/: 转换命令.txt
Hisi/SS928/: README.md
Hisi/SS928/model_infer/inc/: main.h
Hisi/SS928/model_infer/script/: pic_process.py  transferPic.py
Hisi/SS928/model_infer/src/: CMakeLists.txt  main.cpp
Hisi/SS928/model_transform/src/: MNIST_calibration.py
Projects/: README.md
Projects/Hi3519DV500_pico_det/: .project
Projects/Hi3519DV500_pico_det/model_infer/: build.sh
Projects/Hi3519DV500_pico_det/model_infer/src/: clipper.cpp  main.cpp  postprocess_op.cpp  preprocess_op.cpp  utility.cpp
Projects/Hi3519DV500_yolov5/: README.md
Projects/Hi3519DV500_yolov5/model_infer/inc/: main.h
Projects/Hi3519DV500_yolov5/model_infer/model/: yolov5n_noquat.om
Projects/Hi3519DV500_yolov5/model_infer/src/: acl.json  main.cpp
Projects/Hi3519DV500_yolov5/model_trans/onnx/: export_onnx.py  onnx_edit.py  onnx_test.py
Rockchip/RK3588/: README.md
Rockchip/RK3588/model_infer/rknpu/template/: CMakeLists.txt  build-linux_RK3588.sh
Rockchip/RK3588/model_infer/rknpu/template/src/: main.cc
Rockchip/RK3588/model_transform/rknn_toolkit/template/: export_rknn.py  test.py
Rockchip/RV1126/: README.md
Rockchip/RV1126/model_infer/template/: CMakeLists.txt  build.sh
Rockchip/RV1126/model_infer/template/src/: main.cc
Rockchip/RV1126/model_transform/template/: export_rknn.py  test.py
images/projects/hi3519dv500_pico_det/inc/: clipper.h  main.h  postprocess_op.h  preprocess_op.h
images/projects/hi3519dv500_pico_det/model/: pico_det_lcnet_quat.om
images/projects/hi3519dv500_pico_det/script/: transferPic.py
images/projects/hi3519dv500_pico_det/src/: CMakeLists.txt  main.cpp  postprocess_op.cpp  preprocess_op.cpp
